Fix shoppingCart scrolling issue, remove small gap above and below shoppingCart

--- a/component-lib/src/organisms/ShoppingCartAccordion/ShoppingCartAccordion.pcss
+++ b/component-lib/src/organisms/ShoppingCartAccordion/ShoppingCartAccordion.pcss
@@ -2,6 +2,8 @@
     position: sticky;
     top: 0;
     z-index: 10;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 .shopping-cart__accordion {
@@ -10,8 +12,6 @@
             background-color: var(--light-grey);
             margin: 0;
             max-width: 100%;
-            margin-top: 1px;
-            margin-bottom: 1px;
         }
 
         .accordion--open {
